<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/q1_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorWhite"
                card_view:cardBackgroundColor="@color/colorWhite"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="2dp"
                card_view:cardUseCompatPadding="false">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/logo"
                        android:layout_width="match_parent"
                        android:layout_height="240dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/lotad" />

                    <TextView
                        android:id="@+id/correct_q1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/logo"
                        android:layout_margin="8dp"
                        android:text="@string/correct"
                        android:textColor="@color/colorGreen"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/wrong_q1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/logo"
                        android:layout_margin="8dp"
                        android:text="@string/wrong1"
                        android:textColor="@color/colorRed"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/q1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/correct_q1"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/question1" />

                    <RadioGroup
                        android:id="@+id/radioGroup1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/q1"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="8dp"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/rb1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/fire" />

                        <RadioButton
                            android:id="@+id/rb2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/water" />

                        <RadioButton
                            android:id="@+id/rb3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/grass" />

                        <RadioButton
                            android:id="@+id/rb4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/electric" />

                    </RadioGroup>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/Submit_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/radioGroup1"
                        android:layout_centerHorizontal="true"
                        android:backgroundTint="@color/colorPrimaryDark"
                        android:text="@string/submit" />


                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/q1_header"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/finish" />

    </RelativeLayout>

</ScrollView>