<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:background="@color/colorBlack">

    <ImageView
        android:id="@+id/udacity"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:src="@drawable/udacity" />

    <TextView
        android:id="@+id/CourtCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/udacity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/tagline"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"/>
    <TextView
        android:id="@+id/ABND"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CourtCounter"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/ABND"
        android:textColor="@color/colorWhite"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_marginTop="48dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ABND"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:scaleType="centerInside"
        android:src="@drawable/logo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorWhite"
        android:text="@string/info" />


    <com.google.android.material.button.MaterialButton
        android:layout_width="200dp"
        android:id="@+id/get_started"
        android:text="@string/get_started"
        android:layout_height="56dp"
        android:textColor="@color/colorWhite"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/colorPrimaryDark"
        app:cornerRadius="24dp"/>

</RelativeLayout>